--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-build_image:
+build:
   script:
     - docker build --no-cache -t d.haflan.dev/general/sermoni:latest .
     - docker push d.haflan.dev/general/sermoni
